# o2-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/o2mcp/: __init__.py  async_transfer.py  config.py  connection.py  keepalive.py  server.py  slurm.py  sync.py  transfer_tools.py  workspace.py  workspace_exec.py
src/o2mcp/runorg/: __init__.py  executor.py  policy.py  runs.py  tools.py
tests/o2_mcp/: test_runorg_tools.py  test_server.py
tests/unit/: test_o2.py  test_o2_async.py  test_runorg.py
